--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -1,3 +1,3 @@
 platform_url_name: "ubuntu"
-codename: {{ansible_distribution_release|lower}}
+codename: "{{ansible_distribution_release|lower}}"
 package_type: "deb"
