Allow override of package version

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,3 +22,4 @@ mesos_containerizers: "mesos"
 mesos_executor_timeout: "5mins"
 
 codename: "{{ansible_distribution_release|lower}}"
+debian_package_version: "{{mesos_version}}-1.0.{{ansible_distribution|lower}}{{ansible_distribution_version.split('.')|join('')}}"
