--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,5 +21,5 @@ mesos_zookeeper_masters: "zk://{{ zookeeper_hostnames }}/mesos"
 mesos_containerizers: "mesos"
 mesos_executor_timeout: "5mins"
 
-codename: "{{ansible_distribution_release|lower}}"
+debian_codename: "{{ansible_distribution_release|lower}}"
 debian_package_version: "{{mesos_version}}-1.0.{{ansible_distribution|lower}}{{ansible_distribution_version.split('.')|join('')}}"
